# hra-glb-mesh-collisions

./: .gitignore  CMakeLists.txt  README.md  collision_result.csv  compute_collision.py  compute_collision.sh  glb_parser.py  main.cpp  mesh-mesh-collisions.py  mesh-mesh-collisions.sh  utils.py
draft/: utils.py
